src/test/deca/context/invalid/print-class.deca
// Description:
//    Condition de la règle 3.31 non respectée 
//
// Resultats:
//    Ligne 14: print ne peut prendre qu'un int ou un float ou une string
//

class A{

}

{
    A a = new A();
    print(a);
}
